+fixes footer overlaps content

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -63,6 +63,10 @@
   display: none;
 }
 
+body {
+  padding-bottom: 160px;
+}
+
 @media only screen and (min-width: 480px) {
   #mapMenuItem {
     display: none;
